added ids and classes, linked css and bootstrap

--- a/Python/flask/fundamentals/HTML_Table/templates/index.html
+++ b/Python/flask/fundamentals/HTML_Table/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>HTML</title>
 </head>
 <body>
-    <div>
-        <table>
+    <div id="container">
+        <table class="table table-striped">
             <thead>
                 <th>First Name</th>
                 <th>Last Name</th>
