--- a/Python/flask/fundamentals/Counter/templates/visits.html
+++ b/Python/flask/fundamentals/Counter/templates/visits.html
@@ -8,7 +8,9 @@
     <title>Visits</title>
 </head>
 <body>
-    <h1># of Visits</h1>
-    <h2>{{session['visits']}}</h2>
+    <div id="container">
+        <h1># of Visits</h1>
+        <h2>{{session['visits']}}</h2>
+    </div>
 </body>
 </html>
