--- a/Python/flask/fundamentals/Dojo_Survey/templates/results.html
+++ b/Python/flask/fundamentals/Dojo_Survey/templates/results.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +21,10 @@
         <div class="output">
             <p>Favorite Language:</p>
             <p>{{session['language']}}</p>
+        </div>
+        <div class="output">
+            <p>Chikkie Nuggies: </p>
+            <p>{{session['nuggies'].value}}</p>
         </div>
         <div class="output">
             <p>Comment: </p>
