--- a/Python/flask_mysql/validation/Login_and_Registration/flask_app/templates/login.html
+++ b/Python/flask_mysql/validation/Login_and_Registration/flask_app/templates/login.html
@@ -18,11 +18,11 @@
                     {% endif %}
                 {% endwith %}
             <form action="/login/process" method="POST">
-                <label for="username">Username</label>
-                    <input type="text" name="username">
+                <label for="email">Email</label>
+                    <input type="text" name="email">
                 <label for="password">Password</label>
                     <input type="password" name="password">
-                <input type="submit" value="Log In or 'login' if youre a pleb like Justin">
+                <input type="submit" value="Log In">
             </form>
         </div>
             
