--- a/Python/flask_mysql/validation/Login_and_Registration/flask_app/templates/registration.html
+++ b/Python/flask_mysql/validation/Login_and_Registration/flask_app/templates/registration.html
@@ -10,13 +10,13 @@
     <div id="container">
         <div>
             <h1>Create a New Account</h1>
-                {% with messages = get_flashed_messages() %}   
-                    {% if messages %}                           
-                        {% for message in messages %}            
-                            <p>{{message}}</p>                   
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
+            {% with messages = get_flashed_messages() %}   
+                {% if messages %}                           
+                    {% for message in messages %}            
+                        <p>{{message}}</p>                   
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <form action="/add/process" method="POST">
                 <label for="first_name">First Name</label>
                     <input type="text" name="first_name">
@@ -24,8 +24,8 @@
                     <input type="text" name="last_name">
                 <label for="email">Email</label>
                     <input type="email" name="email">
-                <label for="user_name">Username</label>
-                    <input type="text" name="username">
+                <!-- <label for="user_name">Username</label>
+                    <input type="text" name="username"> -->
                 <label for="password">Password</label>
                     <input type="password" name="password">
                 <label for="confirmation">Confirm Password</label>
