--- a/MERN/react/class_components/react_blocks/src/App.css
+++ b/MERN/react/class_components/react_blocks/src/App.css
@@ -2,7 +2,6 @@
   width: 950px;
   background-color: silver;
   /* display: flex; */
-  height: 900px;
   padding: 5px ;
   margin: 0px auto;
 }
@@ -16,16 +15,19 @@
   height: 400px;
   width: 200px;
   background-color: blue;
+  vertical-align: top;
   display:inline-block;
-  margin-left:10px;
+  margin:20px;
+  margin-top: 10px;
 }
 .main {
   height: 400px;
-  width: 650px;
+  width: 680px;
   background-color: red;
   display:inline-block;
   vertical-align: top;
-  margin-right:10px;
+  margin:10px;
+  margin-right: 20px;
 }
 .subcontent {
   height: 200px;
@@ -35,10 +37,10 @@
 }
 .advertisement {
   height: 120px;
-  width: 660px;
+  width: 620px;
   background-color: purple;
   margin-top:25px;
-  margin-left:20px;
+  margin-left:30px;
 }
 .row {
   display: flex;
